# bur

./: .env.example  .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
deploy/: DEPLOY.md  bur-web.service  nginx-bur.conf
docs/: ARCHITECTURE.md
web/: next.config.mjs  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/account/: PasswordForm.tsx  page.tsx
web/src/app/admin/: RoleControls.tsx  page.tsx
web/src/app/api/account/password/: route.ts
web/src/app/api/admin/users/[id]/: route.ts
web/src/app/api/auth/login/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/auth/register/: route.ts
web/src/app/api/auth/verify/: route.ts
web/src/app/api/contributions/[id]/decide/: route.ts
web/src/app/api/recipes/: route.ts
web/src/app/api/recipes/[id]/: route.ts
web/src/app/api/recipes/[id]/approve/: route.ts
web/src/app/api/recipes/[id]/publish/: route.ts
web/src/app/api/recipes/mine/: route.ts
web/src/app/dashboard/: PublishForm.tsx  page.tsx
web/src/app/docs/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/app/review/: ReviewActions.tsx  page.tsx
web/src/app/submit/: SubmitForm.tsx  page.tsx
web/src/app/support/: page.tsx
web/src/components/: ContributeButton.tsx  ContributionDecide.tsx  DeleteRecipe.tsx  DeleteUser.tsx  HeroTerminal.tsx  Reveal.tsx  SignOut.tsx  ThemeToggle.tsx
web/src/lib/: auth.ts  db.ts  email.ts  permissions.ts  ratelimit.ts  session.ts  types.ts  validation.ts
(+1 files in other folders)
