[package]
name = "bur"
version = "0.1.0"
edition = "2021"
description = "Blueberry User Repository client — search, build, submit and install community recipes"
license = "GPL-3.0-or-later"

[[bin]]
name = "bur"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
dirs = "5"

[profile.release]
opt-level = "z"
lto = false
strip = true
